fix note text wrap

--- a/tumblr/less/app.less
+++ b/tumblr/less/app.less
@@ -873,10 +873,10 @@ body {
                 margin-left: 0;
 
                 li {
-                    margin-bottom: 5px;
+                    margin-bottom: @line-height-computed / 2;
 
                     .avatar {
-                        display: inline-block;
+                        float: left;
                         margin: 0 10px 0 0;
                         width: auto;
                         .square(32px);
@@ -885,7 +885,7 @@ body {
 
                     .action {
                         display: inline-block;
-                        line-height: 32px;
+                        line-height: 1.1;
                     }
 
 
